--- a/Assets/Packages/com.studio233.ss2.testproject/Runtime/com.studio233.ss2.testproject.asmdef
+++ b/Assets/Packages/com.studio233.ss2.testproject/Runtime/com.studio233.ss2.testproject.asmdef
@@ -1,8 +1,8 @@
 {
-  "name": "com.studio23.upmassistant.test.editor",
+  "name": "com.studio233.ss2.testproject",
   "references": [],
   "optionalUnityReferences": [],
-  "includePlatforms": ["Editor"],
+  "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
   "overrideReferences": false,
