--- a/Assets/Packages/com.studio23.ss2.upmassistant/Editor/com.studio23.ss2.upmassistant.editor.asmdef
+++ b/Assets/Packages/com.studio23.ss2.upmassistant/Editor/com.studio23.ss2.upmassistant.editor.asmdef
@@ -1,12 +1,18 @@
 {
-  "name": "com.studio23.ss2.upmassistant.editor",
-  "references": [],
-  "optionalUnityReferences": [],
-  "includePlatforms": ["Editor"],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": []
+    "name": "com.studio23.ss2.upmassistant.editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
